Números como entrada

--- a/documentación/algoritmoReto.tex
+++ b/documentación/algoritmoReto.tex
@@ -73,9 +73,10 @@
    
    \begin{algorithm}[H]
    \begin{algorithmic}[1]
-   \REQUIRE \C++{meta} número a aproximar\\
-            \C++{size}, número de posiciones de la lista \C++{numeros}
-            
+   \REQUIRE \ \\
+	    \C++{meta}, número a aproximar\\
+	    \C++{numeros}, enteros aleatorios iniciales del conjunto\\
+            \C++{size}, número de posiciones de la lista \C++{numeros}    
             
    \ENSURE \TRUE si logramos alcanzar exactamente \C++{meta}
    
