TDA Cuenta implementado, no documentado aún

--- a/documentación/algoritmoReto.tex
+++ b/documentación/algoritmoReto.tex
@@ -80,8 +80,8 @@
             
    \ENSURE \TRUE si logramos alcanzar exactamente \C++{meta}
    
-   \IF{\C++{size} es menor a 2} 
-   \STATE{Devolvemos \FALSE}
+   \IF{\C++{size} es menor a 2}
+   \RETURN \FALSE
    \ENDIF
    
    \FOR{\C++{i} desde la primera posición de la lista, hasta la anterior a la 
