--- a/documentación/spanishAlgorithmic.tex
+++ b/documentación/spanishAlgorithmic.tex
@@ -2,13 +2,13 @@
 \renewcommand{\listalgorithmname}{Lista de algoritmos}
 \renewcommand{\algorithmicrequire}{\textbf{Entrada:}}
 \renewcommand{\algorithmicensure}{\textbf{Salida:}}
-\renewcommand{\algorithmicend}{\textbf{Fin}}
-\renewcommand{\algorithmicif}{\textbf{Si}}
+\renewcommand{\algorithmicend}{\textbf{fin}}
+\renewcommand{\algorithmicif}{\textbf{si}}
 \renewcommand{\algorithmicthen}{\textbf{entonces}}
-\renewcommand{\algorithmicelse}{\textbf{Si no}}
+\renewcommand{\algorithmicelse}{\textbf{en otro caso}}
 \renewcommand{\algorithmicelsif}{\algorithmicelse,\ \algorithmicif}
 \renewcommand{\algorithmicendif}{\algorithmicend\ \algorithmicif}
-\renewcommand{\algorithmicfor}{\textbf{Para }}
+\renewcommand{\algorithmicfor}{\textbf{para }}
 \renewcommand{\algorithmicforall}{\textbf{para todo}}
 \renewcommand{\algorithmicdo}{\textbf{}}
 \renewcommand{\algorithmicendfor}{\algorithmicend\ \algorithmicfor}
